--- a/marker02_NewMarker.html
+++ b/marker02_NewMarker.html
@@ -5,14 +5,14 @@
     <script src="libs/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker type='pattern' url='markers/sun-marker.patt'>
+        <a-marker-camera type='pattern' url='markers/sun-marker.patt'>
             <a-entity
             position="-1 -1 0"
             scale="1 1 1"
             rotation="-90 -90 0"
             gltf-model="models/RiggedFigure.gltf"
             ></a-entity>
-        </a-marker>
+        </a-marker-camera>
         <a-entity camera></a-entity>
         </a-scene>
     </body>
