--- a/marker02a.html
+++ b/marker02a.html
@@ -5,12 +5,12 @@
     <script src="libs/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker-camera type='pattern' url='markers/hiro-marker.patt'>
+        <a-marker-camera type='pattern' url='https://mcsunvtc.github.io/ar01/markers/hiro-marker.patt'>
             <a-entity
             position="-1 -1 0"
             scale="1 1 1"
             rotation="-90 -90 0"
-            gltf-model="models/RiggedFigure.gltf"
+            gltf-model="https://mcsunvtc.github.io/ar01/models/RiggedFigure.gltf"
             ></a-entity>
         </a-marker-camera>
         <a-entity camera></a-entity>
