--- a/marker01b.html
+++ b/marker01b.html
@@ -5,15 +5,15 @@
     <script src="libs/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <a-entity
-            position="-1 -1 0"
-            scale="1 1 1"
-            rotation="-90 -90 0"
-            gltf-model="models/RiggedFigure.gltf"
-            ></a-entity>
-        </a-marker>
-        <a-entity camera></a-entity>
+            <a-marker preset="hiro">
+                <a-entity
+                position="-1 -1 0"
+                scale="1 1 1"
+                rotation="-90 -90 0"
+                gltf-model="models/RiggedFigure.gltf"
+                >
+                </a-entity>
+            </a-marker>
         </a-scene>
     </body>
 </html>
