--- a/marker01b.html
+++ b/marker01b.html
@@ -5,7 +5,7 @@
     <script src="libs/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-            <a-marker preset="hiro">
+            <a-marker-camera preset="hiro">
                 <a-entity
                 position="-1 -1 0"
                 scale="1 1 1"
@@ -13,7 +13,7 @@
                 gltf-model="models/RiggedFigure.gltf"
                 >
                 </a-entity>
-            </a-marker>
+            </a-marker-camera>
         </a-scene>
     </body>
 </html>
