--- a/model_rotate.html
+++ b/model_rotate.html
@@ -7,7 +7,7 @@
         <a-scene background="color: #ddFAdd">
             <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
             <a-entity 
-                scale="40 40 40" position="0 0.5 -3" gltf-model="url(models/Boombox.gltf)"
+                scale="40 40 40" position="0 0.5 -3" gltf-model="url(Boombox.gltf)"
                 animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear;"
             >
             </a-entity>
