--- a/cursorHyperlink.html
+++ b/cursorHyperlink.html
@@ -33,7 +33,7 @@
                   material="color: black; shader: flat">
         </a-entity>
       </a-entity>
-      <a-box src="images/FreeFontsBG.jpg" position="-1 2.5 -4"></a-box>
+      <a-box src="images/home.png" position="-1 2.5 -4"></a-box>
       <!-- <a-box src="https://i.imgur.com/mYmmbrp.jpg" position="-1 2.5 -4"></a-box>
       <a-box  cursor-listener  position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box> -->
       <a-sphere cursor-listener position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
