--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/guiweb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/guiweb.data.gz",
-        frameworkUrl: buildUrl + "/guiweb.framework.js.gz",
-        codeUrl: buildUrl + "/guiweb.wasm.gz",
+        dataUrl: buildUrl + "/guiweb.data",
+        frameworkUrl: buildUrl + "/guiweb.framework.js",
+        codeUrl: buildUrl + "/guiweb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "T02_GUI",
